# rustcraft

./: .gitignore  Cargo.toml  ELECTRICAL_FIXES_SUMMARY.md  ELECTRICAL_SYSTEM_ANALYSIS.md  GAME_PLAN.md  GAME_STATUS.md  IMPLEMENTATION_STATUS.md  README.md  STATE.md  STATUS.md  STATUS_REPORT.md
docs/: GAME_AUDIT.md  electrical.md
src/: block.rs  camera.rs  chunk.rs  crafting.rs  electric.rs  entity.rs  fluid_compute.wgsl  fluid_gpu.rs  fluid_system.rs  highlight.wgsl  inventory.rs  item.rs  lighting.rs  main.rs  mesh.rs  npu.rs  profiler.rs  raycast.rs  renderer.rs  settings.rs  shader.wgsl  sky.wgsl  texture.rs  ui_shader.wgsl  world.rs
